[tool.poetry]
name = "schemafunc"
version = "0.3.17"
description = "Python function-to-LLM tool maker."
authors = ["Dustin Wyatt <dustin.wyatt@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dmwyatt/schemafunc"

keywords = ["python", "openai", "llm", "language-model", "schema", "function", "tool"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

exclude=["tests/*", "dev_scripts/*"]


[tool.poetry.dependencies]
python = "^3.10.11"
docstring-parser = "^0.16"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"
release = "dev_scripts.release:main"

