[project]
name = "schemafunc"
version = "0.3.19"
description = "Python function-to-LLM tool maker."
readme = "README.md"
requires-python = ">=3.10.11"
license = { text = "MIT" }
authors = [
    { name = "Dustin Wyatt", email = "dustin.wyatt@gmail.com" },
]
keywords = ["python", "openai", "llm", "language-model", "schema", "function", "tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/dmwyatt/schemafunc"

[project.dependencies]
docstring-parser = ">=0.16,<0.17"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1,<9",
    "rich>=13.7.1,<14",
    "click>=8.1.7,<9",
]

[project.scripts]
test = "pytest:main"
release = "dev_scripts.release:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests", "dev_scripts"]


