[project]
name = "schemafunc"
version = "0.3.19"
description = "Python function-to-LLM tool maker."
readme = "README.md"
requires-python = ">=3.10.11"
license = { text = "MIT" }
authors = [
    { name = "Dustin Wyatt", email = "dustin.wyatt@gmail.com" },
]
keywords = ["python", "openai", "llm", "language-model", "schema", "function", "tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "docstring-parser>=0.16,<0.17",
]

[project.urls]
Repository = "https://github.com/dmwyatt/schemafunc"

[project.scripts]
test = "pytest:main"
release = "dev_scripts.release:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests", "dev_scripts"]

[dependency-groups]
dev = [
    "click>=8.3.1",
    "pytest>=9.0.1",
    "rich>=14.2.0",
]


